fixed confirm button vertical alignment added a little margin to .app-icon inside dim-button

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -342,6 +342,10 @@ select {
   &:focus:not(:focus-visible) {
     border-color: transparent;
   }
+
+  & .app-icon {
+    margin-right: 4px;
+  }
 }
 
 a.dim-button {
